static/css/home.css
.home-page-container {
    position: relative;
}

.find-events {
    overflow: hidden;
    position: relative;
}

.find-events img {
    width: 100%;
    height: auto;
    max-width: 100%;
    max-height: 30em;
    object-fit: cover;
    display: block;
}

.welcome-message {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: #f4f4f4;
    background-color: rgba(0, 0, 0, 0.7);
    padding: 0.6em;
    line-height: 1em;
}


.category-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.category-link {
    text-align: center;
    text-decoration: none;
    color: #333;
    margin: 1.2em 0;
    width: 5em;
}

.category-link i {
    font-size: 3em;
    display: block;
}

.category-text {
    display: block;
    margin-top: 0.2em;
}

.event-section-heading {
    text-align: center;
}

.event-box-container {
    display: flex;
    flex-wrap: wrap;
    max-width: 81em;
    margin: 0 auto;
    justify-content: center;
}

.event-box {
    width: 17em;
    margin: 10px;
    padding: 15px;
    border: 1px solid #ddd;
    border-radius: 5px;
    text-align: center;
    transition: box-shadow 0.3s;
    /*flex: 1;*/
}

.event-box:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.event-link {
    text-decoration: none;
    color: #333;
}

.event-image {
    width: 100%;
    height: 10em;
    object-fit: cover;
    border-radius: 5px;
    margin-bottom: 10px;
}

.event-title {
    margin: 0;
    font-size: 1.2em;
}

.event-date-time {
    font-weight: bold;
}

.event-location {
    color: #555;
}

@media only screen and (max-width: 768px) {

    .event-box{
        width: 100%;
    }

    .event-image {
        height: 15em;
    }

    .welcome-message {
        font-size: 0.8em;
    }

    .category-link {
        width: 2.8em;
    }

    .category-link i {
        font-size: 1.8em;
    }

    .category-text {
        font-size: 0.6em;
    }
}


@media screen and (max-width: 480px) {
    .category-text {
        margin: 0 0.2em;
    }
}

